# evozeus-infra

./: .gitignore  AGENTS.md  README.md  SKILL.md  package.json  pyproject.toml
docs/: README.md  (+6 more)
prototypes/main-repo-runtime/: .gitignore  README.md  pyproject.toml
prototypes/main-repo-runtime/__infra__/: README.md
prototypes/main-repo-runtime/__infra__/factor_packs/default.negative_feedback/0.1.0/: FACTOR.xml  factor.json  factor.py
prototypes/main-repo-runtime/__infra__/factor_packs/default.open_loop/0.1.0/: FACTOR.xml  factor.py
prototypes/main-repo-runtime/__infra__/scripts/: result_report_smoke.py  run_factor_smoke.py  run_session_report.py  scan_factors_smoke.py  scan_sessions_smoke.py  smoke_support.py
prototypes/main-repo-runtime/__infra__/src/evozeus/: checks.py  cli.py  doctor.py  models.py  verdict_card.py  workspace.py
prototypes/main-repo-runtime/__infra__/testdata/: README.md
prototypes/main-repo-runtime/__infra__/testdata/codex_sessions/: codex-source-ids.jsonl
prototypes/main-repo-runtime/__infra__/tests/: test_cli.py  test_codex_scanner.py  test_companion.py  test_dashboard_signal_factors.py  test_default_factors.py  test_doctor.py  test_factor_packs.py  test_factor_protocol.py  test_factor_registry.py  test_factor_runner.py  test_factor_runtime_isolation.py  test_file_repository.py  test_infra_layout.py  test_result_visualizations.py  test_runtime_paths.py  test_scanner_packs.py  test_scanner_registry.py  test_smoke_scripts.py  test_source_resolver.py  test_sqlite_result_store.py  test_tui.py  test_verdict_card.py  test_workspace.py
(+149 files in other folders)
