[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evozeus-runtime"
version = "0.1.0"
description = "EvoZeus local scanner and factor runner runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
evozeus-runtime = "evozeus_runtime.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/evozeus_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

