[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evozeus"
version = "0.0.1"
description = "Agent Session Judgment Layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "textual>=0.80",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
evozeus = "evozeus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["__infra__/src/evozeus"]

[tool.pytest.ini_options]
testpaths = ["__infra__/tests"]
pythonpath = ["__infra__/src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
